# azure-grok3

./: .env-example  README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
azure_grok3/: hosting.py
azure_grok3/protocols/: i_azure_grok3_service.py
azure_grok3/services/: azure_grok3_service.py
tests/azure_grok3/services/: test_azure_grok3_service.py
